# shutterstock_analysis

./: .gitignore  README.md  pyproject.toml  setup.cfg
shutterstock_analysis/: __init__.py  shutterstock.py
