[metadata]
name = shutterstock_analysis
version = 0.0.1
author = Thinh Vu
author_email = mrthinh@live.com
description = Analyze the insights from Shutterstock to improve stock photo-selling business
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thinh-vu/vnnews
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
packages = find:
python_requires = >=3.7
