[metadata]
name = shutterstock_analysis
version = 0.0.2
author = Thinh Vu
author_email = mrthinh@live.com
description = The first python package on the internet supports analyzing the Shutterstock public data, which helps creators optimize their creative portfolio and earn more income with less effort.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thinh-vu/vnnews
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
packages = find:
python_requires = >=3.7
